--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,12 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "args": [
+                "--model","seresnext101",
+                "--freeze",
+                
+            ]
         }
     ]
 }
