--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-"python.envFile": "${workspaceFolder}/.env",
-"python.pythonPath": "C:\\Users\\ming\\.conda\\envs\\py3.9\\python.exe"
+"python.envFile": "${workspaceFolder}/.env"
 }
