--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-"python.envFile": "${workspaceFolder}/.env",
-"python.pythonPath": "/home/xdl/miniconda3/envs/torch_env/bin/python"
+"python.envFile": "${workspaceFolder}/.env"
 }
